--- a/templates/new_door/entity_overview.html
+++ b/templates/new_door/entity_overview.html
@@ -3,8 +3,8 @@
 <div class="row">
   <div class="col-md-12">
     <div class="card">
-      <div class="card-header card-header-primary card-header-icon">
-        <div class="card-icon" style="padding-left: 1px">
+      <div class="card-header card-header-primary card-header-icon ">
+        <div class="card-icon " style="padding-left: 1px">
           <a
             href=" {% url 'entity_overview'%} "
             class="card-header card-header-rose card-header-text"
@@ -12,6 +12,16 @@
           >
             <i class="material-icons">person</i> Entity Overview
           </a>
+         
+        </div>
+        <div class="card-icon float-right" style="padding:.5em 0; font-size: 1rem; background: rgb(224, 79, 115);">
+          <a
+            href=" {% url 'add_entity'%} "
+            class="card-header card-header-rose card-header-text"
+          >
+            <i class="material-icons">add</i>Add Entity
+          </a>
+         
         </div>
       </div>
       <div class="card-body">
@@ -46,11 +56,9 @@
                 <td>{{entity.country}}</td>
                 <td class="text-right">
                   <a
-                    href=""
-                    method="post"
+                    href="{% url 'view_entity'  entity.pk %}"
                     class="d-inline"
                     rel="tooltip"
-                    title=" "
                     data-original-title="Remove"
                     >{% csrf_token %}
                     <div class="ripple-container success"></div>
