--- a/templates/new_door/view_occupancy_type.html
+++ b/templates/new_door/view_occupancy_type.html
@@ -5,15 +5,17 @@
     <br />
     <div class="row">
       <div class="col-sm-12">
-        <h4 class="alert alert-info">Update Occupancy Type</h4>
-        <form id="TypeValidation"class="form-horizontal" action=" " method="post"novalidate="novalidate" >
+        <h4 class="alert alert-info">Occupancy Type Details</h4>
+        <form id="TypeValidation"class="form-horizontal" method="post" novalidate="novalidate" >
           {% csrf_token %}
           <div class="card-body">
             <br />
-            <!-- # Code refactored - 30-11-2020 9.20PM- Patrick -->
+            <!-- # Code refactored - 26-11-2020 9.20PM- Patrick -->
            {% for field in form %}
             <div class="row">
-              <label class="col-sm-3 col-form-label" for="OwnershipType">{{ field.label }}*</label>
+              <label class="col-sm-3 col-form-label" for="OwnershipType"
+                >{{ field.label }}*</label
+              >
               <div class="col-sm-6">
                 <div class="form-group bmd-form-group">
                   <input
@@ -25,6 +27,7 @@
                     name="{{ field.name }}"
                     required="true"
                     aria-required="true"
+                    disabled
                   />
                 </div>
               </div>
@@ -33,7 +36,7 @@
           </div>
           <div class="modal-footer">
             <a
-              href="{% url 'add_ownership_type'%}"
+              href="{% url 'add_occupancy_type'%}"
               class="btn btn-info btn-round float-right"
               style="margin-bottom: 20px; margin-top: 20px"
             >
