added new tempates and updated the propert and unit overview dashboard

--- a/templates/new_door/update_unit.html
+++ b/templates/new_door/update_unit.html
@@ -146,7 +146,7 @@
                     "
                   />
                   <a
-                    href="{% url 'property_overview'%}"
+                    href=""
                     class="btn btn-info btn-round float-right"
                     style="margin-bottom: 20px; margin-top: 20px"
                   >
