--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -86,7 +86,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'property_overview' %}">
+              <a class="nav-link" href="">
                 <span class="sidebar-mini"> EO </span>
                 <span class="sidebar-normal"> Property Overview </span>
               </a>
