--- a/templates/new_door/entity_overview.html
+++ b/templates/new_door/entity_overview.html
@@ -3,8 +3,8 @@
 <div class="row">
   <div class="col-md-12">
     <div class="card">
-      <div class="card-header card-header-primary card-header-icon ">
-        <div class="card-icon " style="padding-left: 1px">
+      <div class="card-header card-header-primary card-header-icon">
+        <div class="card-icon" style="padding-left: 1px">
           <a
             href=" {% url 'entity_overview'%} "
             class="card-header card-header-rose card-header-text"
@@ -12,16 +12,21 @@
           >
             <i class="material-icons">person</i> Entity Overview
           </a>
-         
         </div>
-        <div class="card-icon float-right" style="padding:.5em 0; font-size: 1rem; background: rgb(224, 79, 115);">
+        <div
+          class="card-icon float-right"
+          style="
+            padding: 0.5em 0;
+            font-size: 1rem;
+            background: rgb(224, 79, 115);
+          "
+        >
           <a
             href=" {% url 'add_entity'%} "
             class="card-header card-header-rose card-header-text"
           >
             <i class="material-icons">add</i>Add Entity
           </a>
-         
         </div>
       </div>
       <div class="card-body">
@@ -55,6 +60,23 @@
                 <td>{{entity.state}}</td>
                 <td>{{entity.country}}</td>
                 <td class="text-right">
+                  <a
+                    href=" {% url 'property_overview' entity.entity_name %} "
+                    method="post "
+                    class="d-inline"
+                    >{% csrf_token %}
+                    <div class="ripple-container success"></div>
+                    <i
+                      class="material-icons"
+                      style="
+                        margin-right: 08px;
+                        margin-top: 10px;
+                        margin-bottom: 20px;
+                        color: #5b93f6;
+                      "
+                      >location_city</i
+                    >
+                  </a>
                   <a
                     href="{% url 'view_entity'  entity.pk %}"
                     class="d-inline"
@@ -92,7 +114,11 @@
                     >
                   </a>
 
-                  <a href="{% url 'delete_entity' entity.pk %}" method="post" class="d-inline">
+                  <a
+                    href="{% url 'delete_entity' entity.pk %}"
+                    method="post"
+                    class="d-inline"
+                  >
                     {% csrf_token %}
                     <i
                       class="material-icons"
