--- a/templates/new_door/property_overview.html
+++ b/templates/new_door/property_overview.html
@@ -76,7 +76,7 @@
       <div class="card-header card-header-primary card-header-icon">
         <div class="card-icon" style="padding-left: 1px">
           <a
-            href=" {% url 'property_overview'%} "
+            href="  "
             class="card-header card-header-rose card-header-text"
             style="font-size: 20px"
           >
@@ -92,7 +92,7 @@
           "
         >
           <a
-            href=" {% url 'add_property'%} "
+            href=" {% url 'add_property' entity.entity_name %} "
             class="card-header card-header-rose card-header-text"
           >
             <i class="material-icons">add</i>Add Property
