--- a/templates/new_door/view_property.html
+++ b/templates/new_door/view_property.html
@@ -80,7 +80,7 @@
 
               <div class="modal-footer" style="float: right; width: 100%">
                 <a
-                  href="{% url 'property_overview'%}"
+                  href=""
                   class="btn btn-info btn-round float-right"
                   style="margin-bottom: 20px; margin-top: 20px"
                 >
