--- a/templates/new_door/add_entity.html
+++ b/templates/new_door/add_entity.html
@@ -31,11 +31,11 @@
           </div>
         </div>
         <div class="row">
-          <label class="col-sm-2 col-form-label">Addres1*</label>
+          <label class="col-sm-2 col-form-label">Address1*</label>
           <div class="col-sm-4">
             <div class="form-group bmd-form-group">{{ form.address1 }}</div>
           </div>
-          <label class="col-sm-2 col-form-label">Addres2*</label>
+          <label class="col-sm-2 col-form-label">Address2*</label>
           <div class="col-sm-4">
             <div class="form-group bmd-form-group">{{ form.address2 }}</div>
           </div>
